# Opencv_Shape_Recognizer

./: CMakeLists.txt  README.md  README.txt
resources/: batch.txt
src/: ColorFilter.cpp  ColorFilter.hpp  ColorMod.hpp  CommandInterpreter.cpp  CommandInterpreter.hpp  ImageContainer.hpp  ImageDisplay.cpp  ImageDisplay.hpp  ShapeRecognizer.cpp  ShapeRecognizer.hpp  Tokenizer.cpp  Tokenizer.hpp  main.cpp
